@@ -62,12 +62,6 @@ static const periph_t peripherals[] = {
 static const size_t peripherals_count =
   sizeof( peripherals ) / sizeof( periph_t );
 
-static libspectrum_byte
-pentagon1024_unattached_port( void )
-{
-  return 0xff;
-}
-
 int
 pentagon1024_init( fuse_machine_info *machine )
 {
@@ -81,7 +75,7 @@ pentagon1024_init( fuse_machine_info *machine )
   machine->ram.contend_delay  = spectrum_contend_delay_none;
   machine->ram.contend_delay_no_mreq = spectrum_contend_delay_none;
 
-  machine->unattached_port = pentagon1024_unattached_port;
+  machine->unattached_port = spectrum_unattached_port_none;
 
   machine->shutdown = NULL;
 
