@@ -51,12 +51,6 @@ static const periph_t peripherals[] = {
 static const size_t peripherals_count =
   sizeof( peripherals ) / sizeof( periph_t );
 
-static libspectrum_byte
-spec48_unattached_port( void )
-{
-  return spectrum_unattached_port();
-}
-
 int
 spec48_port_from_ula( libspectrum_word port )
 {
@@ -76,7 +70,7 @@ int spec48_init( fuse_machine_info *machine )
   machine->ram.contend_delay	     = spectrum_contend_delay_65432100;
   machine->ram.contend_delay_no_mreq = spectrum_contend_delay_65432100;
 
-  machine->unattached_port = spec48_unattached_port;
+  machine->unattached_port = spectrum_unattached_port;
 
   machine->shutdown = NULL;
 
