@@ -74,6 +74,7 @@ libspectrum_byte spectrum_contend_delay_65432100( libspectrum_dword time );
 libspectrum_byte spectrum_contend_delay_76543210( libspectrum_dword time );
 
 libspectrum_byte spectrum_unattached_port( void );
+libspectrum_byte spectrum_unattached_port_none( void );
 
 /* Miscellaneous stuff */
 
